Can display token above the grid for column choice

--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <title>Title</title>
 </head>
 <body>
+<div class="column-choice">
+    <div class="token-container">
+        <div class="token column-7 token-red"></div>
+    </div>
+</div>
 <div class="game-container">
-    <img id="grid-fill" src="connect4board.png" alt="connect 4" />
+    <img id="grid-fill" src="connect4board.png" alt="connect 4"/>
     <div class="token-container">
         <div class="token token-position-1-5 token-red"></div>
     </div>
