--- a/index.html
+++ b/index.html
@@ -2,21 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="style.css" rel="stylesheet" type="text/css">
-    <title>Title</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.2.1/css/all.css"> <!-- Lien font-awesome -->
+    <link rel="stylesheet" href="assets/css/index.css">
+
+    <title>Puissance 4</title>
 </head>
 <body>
-<div class="column-choice">
-    <div class="token-container">
-        <div class="token column-7 token-red"></div>
-    </div>
-</div>
-<div class="game-container">
-    <img id="grid-fill" src="connect4board.png" alt="connect 4"/>
-    <div class="token-container">
-        <div class="token token-position-1-5 token-red"></div>
-    </div>
-</div>
+    <div class="container-fluid">
+        <!-- Container de l'en-tête de page -->
+        <div class="header-container">
+            <div class="title-container">
+                <img id= "logo" src="assets/imgs/logo.png" alt="Logo">
+                <label>PUISSANCE 4</label>
+            </div>
+            <div class="header-menu-container">
+                <i class="fas fa-right-to-bracket"></i>
+                <a href="">Log In</a>
+            </div>
+        </div>
 
+        <div class="main-container">
+            <div class="center-container">
+                <div class="button-container">
+                    <button id="play-local-button" onclick="window.location.href='./game.html'">
+                        <i class="fa-sharp fa-solid fa-desktop"></i>
+                        Play Local Mode
+                    </button>
+                </div>
+                <div>
+                    <a href="">Log in to play online</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
