--- a/index.html
+++ b/index.html
@@ -6,14 +6,10 @@
     <title>Title</title>
 </head>
 <body>
-<div class="column-choice">
-    <div class="token-container">
-        <div class="token column-7 token-red"></div>
-    </div>
-</div>
 <div class="game-container">
     <img id="grid-fill" src="connect4board.png" alt="connect 4"/>
     <div class="token-container">
+        <div class="token column-choice column-4 token-red"></div>
         <div class="token token-position-1-5 token-red"></div>
     </div>
 </div>
