Make a div for each column
* Make a div for each colum with the classes "column column-i" for the ith column
* Removed unused css code

--- a/game.html
+++ b/game.html
@@ -6,15 +6,23 @@
     <title>Title</title>
 </head>
 <body>
-<div class="column-choice">
-    <div class="token-container">
-        <div class="token column-7 token-red"></div>
-    </div>
-</div>
 <div class="game-container">
     <img id="grid-fill" src="assets/imgs/connect4board.png" alt="connect 4"/>
+
     <div class="token-container">
-        <div class="token token-position-1-5 token-red"></div>
+        <div class="column column-1">
+
+        </div>
+        <div class="column column-2">
+            <div class="token regular token-red"></div>
+        </div>
+        <div class="column column-3">
+            <div class="token column-choice token-red"></div>
+        </div>
+        <div class="column column-4"></div>
+        <div class="column column-5"></div>
+        <div class="column column-6"></div>
+        <div class="column column-7"></div>
     </div>
 </div>
 
