Added basic game UI
- Game Ui added through another html
file named "game2.html".
- Game system still need to be added.
- Path from index changed.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="main-container">
             <div class="center-container">
                 <div class="button-container">
-                    <button id="play-local-button" onclick="window.location.href='./game.html'">
+                    <button id="play-local-button" onclick="window.location.href='./game2.html'">
                         <i class="fa-sharp fa-solid fa-desktop"></i>
                         Play Local Mode
                     </button>
