--- a/game2.html
+++ b/game2.html
@@ -38,9 +38,7 @@
             <img id="grid-fill" src="assets/imgs/connect4board.png" alt="connect 4"/>
 
             <div class="token-container">
-                <div class="column column-1">
-
-                </div>
+                <div class="column column-1"></div>
                 <div class="column column-2">
                     <div class="token regular token-red"></div>
                 </div>
@@ -54,11 +52,8 @@
             </div>
         </div>
         <div class="player2 player-container">
-            <div class="turn-label-container">
-                <label id="player2-turn-label"></label>
-            </div>
+            <div class="turn-label-container"></div>
             <div id="player2-pic-container" class="player-pic-container">
-                <!--<img id="player1-pic" src="assets/imgs/logo.png" alt="Logo">-->
                 <button>
                     <i id="player2-pic" class="fa-solid fa-user"></i>
                 </button>
