Implement basic functionality of the game
* Can place tokens by clicking
* We can no longer place another token when the column is full
* Check for draw by just logging when we can no longer place token
* Check for win by just logging the color of the winner in the console
* Simple falling down animation

--- a/game.html
+++ b/game.html
@@ -35,16 +35,22 @@
             <div class="player-score-container">0</div>
         </div>
         <div class="game-container">
+            <div class="hover-container">
+                <div class="choice hover-1"></div>
+                <div class="choice hover-2"></div>
+                <div class="choice hover-3"></div>
+                <div class="choice hover-4"></div>
+                <div class="choice hover-5"></div>
+                <div class="choice hover-6"></div>
+                <div class="choice hover-7"></div>
+            </div>
+
             <img id="grid-fill" src="assets/imgs/connect4board.png" alt="connect 4"/>
 
             <div class="token-container">
                 <div class="column column-1"></div>
-                <div class="column column-2">
-                    <div class="token regular token-red"></div>
-                </div>
-                <div class="column column-3">
-                    <div class="token column-choice token-red"></div>
-                </div>
+                <div class="column column-2"></div>
+                <div class="column column-3"></div>
                 <div class="column column-4"></div>
                 <div class="column column-5"></div>
                 <div class="column column-6"></div>
@@ -63,5 +69,6 @@
         </div>
     </div>
 </div>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
